# rl_robot

my_robot_world/: package.xml  robot_topic.sh
my_robot_world/config/: ur3e_controllers.yaml  ur3e_pid_gains.yaml
my_robot_world/launch/: joint_gui.launch  myrviz.rviz  start.launch
my_robot_world/script/: random_tomato.py  set_initial_pose.py  tomato_harvest_env.py  train_ppo.py  train_rb5.py
my_robot_world/script/train_rb5_with_ik/: train_rb5_iks.py  train_rb5_iks_gazebo.py  train_rb5_iks_gazebo_with_moveit.py
my_robot_world/urdf/: camera.urdf  cube_small.urdf  rb5_moveit.urdf  rb5_moveit_ee2.urdf  tomato_robot.urdf  tomato_robot.xacro
my_robot_world/worlds/: tomato_world.world
robot_arm_6dof/: CMakeLists.txt  package.xml
robot_arm_6dof/launch/: random_marker.launch  robot_arm_6dof.launch
robot_arm_6dof/src/: random_marker.cpp  robot_arm_6dof.cpp
